argocd/infra/authentik/manifests/reference-grants.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-apps-to-embedded-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: qbittorrent
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: sonarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: radarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: prowlarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: backrest
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: calibre
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: bazarr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: maintainerr
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: change-detection
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: external-services
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: books
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: argo-rollouts
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
