argocd/infra/authentik/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authentik
    gethomepage.dev/icon: authentik
    gethomepage.dev/description: "Authentik is an open-source Identity Provider that\
      \ emphasizes flexibility and versatility, with support for a wide set of protocols."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=authentik
  labels:
    app.kubernetes.io/instance: authentik-app
  name: authentik-http-route
  namespace: authentik
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
    # - name: cilium-public-gateway
    #   group: gateway.networking.k8s.io
    #   kind: Gateway
    #   namespace: cilium
    #   sectionName: https
  hostnames:
    - authentik.yanello.net
  rules:
    - backendRefs:
        - name: authentik-server
          group: ""
          kind: Service
          namespace: authentik
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
