argocd/infra/authentik/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/instance: authentik
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
            - port: "9300"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:cnpg.io/cluster: authentik-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - cluster
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "587"
              protocol: TCP
    - toCIDR:
        - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "9119"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-db
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
